<resources>
    <string name="app_name">Project3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Easy">Easy</string>
    <string name="Medium">Medium</string>
    <string name="Hard">Hard</string>
    <string name="difficulty">Select difficulty:</string>
    <string name="operator">Select operation:</string>
    <string name="addition">Addition</string>
    <string name="multi">Multiplication</string>
    <string name="division">Division</string>
    <string name="sub">Subtraction</string>
    <string name="qnum">Number of questions</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="mult">X</string>
    <string name="div">/</string>
    <string name="num">1</string>
    <string name="start">START</string>
    <string name="what">What is...</string>
    <string name="done">DONE</string>
    <string name="answer">Your answer...</string>
    <string name="do_it_again">Do it again</string>
    <string name="score">7 out of 10</string>
    <string name="your_score">Your score:</string>
</resources>