<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="151dp"
        android:layout_height="126dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty"
            android:textColor="@color/darkgrey"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="163dp"></TextView>

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Easy"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="230dp" />


        <RadioButton
            android:id="@+id/medium"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Medium"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="182dp" />

        <RadioButton
            android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Hard"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="278dp" />

    </RadioGroup>
    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="143dp"
        android:layout_height="154dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operator"
            android:textColor="@color/darkgrey"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="163dp"></TextView>

        <RadioButton
            android:id="@+id/addition"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:onClick="onRadioButtonClicked"
            android:padding="0dp"
            android:text="@string/addition"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="230dp" />


        <RadioButton
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/multi"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="182dp" />

        <RadioButton
            android:id="@+id/division"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/division"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="278dp" />

        <RadioButton
            android:id="@+id/subtraction"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/sub"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="278dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/qnum"
        android:textColor="@color/darkgrey"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/num"
        android:layout_marginBottom="30dp"
        ></TextView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle2"
            android:text="@string/plus"
            android:textColor="@color/darkgrey"
            android:textSize="60dp"
            app:layout_constraintBottom_toTopOf="@+id/start"
            app:layout_constraintLeft_toRightOf="@+id/num" />

    <TextView
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/num"
        android:textColor="@color/darkgrey"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonstyle2"
        android:text="@string/minus"
        android:textColor="@color/darkgrey"
        android:textSize="60dp"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintRight_toLeftOf="@id/num"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonstyle"
        android:padding="90dp"
        android:text="@string/start"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>